--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "aws-sdk": "^2.1018.0",
     "axios": "^0.24.0",
+    "cron": "^1.8.2",
+    "dotenv": "^10.0.0",
     "puppeteer": "^10.4.0",
     "uuid": "^8.3.2"
   },
